--- a/app/app/ClientApp/package.json
+++ b/app/app/ClientApp/package.json
@@ -31,12 +31,13 @@
     "@ngrx/store": "^8.6.0",
     "@ngrx/store-devtools": "^8.6.0",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
+    "@types/jquery": "^3.3.31",
     "angular-google-charts": "^0.1.6",
     "angular-material": "^1.1.20",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.3.1",
     "core-js": "^3.3.3",
-    "jquery": "3.4.1",
+    "jquery": "^3.4.1",
     "moment": "^2.24.0",
     "ngx-bootstrap": "^5.2.0",
     "oidc-client": "^1.9.1",
